--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "olx",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rsmp3121.github.io/OLX-Clone",
+  "homepage": "https://rsmp3121.github.io/OlxClone",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -19,9 +19,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "predeploy":"npm run build",
-    "deploy":"gh-pages -d build"
-
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
