--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "olx",
+  "name": "OlxClone",
   "version": "0.1.0",
   "private": true,
   "homepage": "https://rsmp3121.github.io/OlxClone",
