--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "OlxClone",
+  "homepage": "https://rsmp3121.github.io/OlxClone",
+  "name": "olx",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rsmp3121.github.io/OlxClone",
+ 
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -18,9 +19,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "eject": "react-scripts eject"
+    
   },
   "eslintConfig": {
     "extends": [
